--- a/LAB_Lectures/lab_1.ipynb
+++ b/LAB_Lectures/lab_1.ipynb
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +850,7 @@
     "        return (X-self.means)/self.stds\n",
     "    \n",
     "    def predict(self, X):\n",
-    "        return self.forward(self._norm(X)).view(-1)\n",
+    "        return self.forward(self._norm(X))\n",
     "    \n",
     "    def score(self, X, Y):\n",
     "        return self.criterion(self.predict(X),Y).item()\n",
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,10 +885,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0013276125537231565\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(reg.score(X_testing, Y_testing))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0.0013276125537231565?"
+   ]
   }
  ],
  "metadata": {
