--- a/LAB_Lectures/lab_1.ipynb
+++ b/LAB_Lectures/lab_1.ipynb
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +729,6 @@
     "        self.means = 0\n",
     "        self.stds = 1\n",
     "        self.criterion = nn.MSELoss()\n",
-    "        self.writer = SummaryWriter('logs/esercizio3/')\n",
     "        \n",
     "    def forward(self,x):\n",
     "        \"\"\"Definisce come processare l'input x\"\"\"\n",
@@ -750,28 +749,40 @@
     "        self.means = X.mean(0)\n",
     "        self.stds = X.std(0)\n",
     "        X_norm = self._norm(X)\n",
+    "        writer = SummaryWriter('logs/esercizio3/')\n",
     "        optimizer = torch.optim.SGD(self.parameters(),lr=lr)\n",
     "        for e in range(epochs):\n",
     "            self.train()\n",
-    "            output = self.forward(X_norm)\n",
+    "            output = self(X_norm)\n",
     "            l = self.criterion(output.view(-1),Y)\n",
     "            #print(\"loss/fit: {}\".format(l.item()))\n",
-    "            self.writer.add_scalar('lr={}/training'.format(lr), l.item(), global_step=e)\n",
+    "            writer.add_scalar('lr={}/e={}/loss/fit'.format(lr,epochs), l.item(), global_step=e)\n",
     "            l.backward()\n",
     "            optimizer.step()\n",
-    "            optimizer.zero_grad()"
+    "            optimizer.zero_grad()\n",
+    "            self.eval()\n",
+    "        writer.flush()\n",
+    "        writer.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "X_training, Y_training, X_testing, Y_testing = reset_elements()\n",
     "for i in range(-10,11):\n",
     "    reg = LinearRegressor(10,1)\n",
-    "    X_training, Y_training, X_testing, Y_testing = reset_elements()\n",
-    "    reg.fit(X_training, Y_training, 1*(10**i), 3000)"
+    "    reg.fit(X_training, Y_training, 1*(10**i), 1000)\n",
+    "    \n",
+    "for i in range(-10,11):\n",
+    "    reg = LinearRegressor(10,1)\n",
+    "    reg.fit(X_training, Y_training, 1*(10**i), 3000)\n",
+    "    \n",
+    "for i in range(-10,11):\n",
+    "    reg = LinearRegressor(10,1)\n",
+    "    reg.fit(X_training, Y_training, 1*(10**i), 5000)"
    ]
   },
   {
@@ -857,6 +868,7 @@
     "        \n",
     "    \n",
     "    def fit(self, X, Y, lr=0.01, epochs=100):\n",
+    "        self.writer.flush()\n",
     "        self.means = X.mean(0)\n",
     "        self.stds = X.std(0)\n",
     "        X_norm = self._norm(X)\n",
@@ -866,10 +878,14 @@
     "            output = self.forward(X_norm)\n",
     "            l = self.criterion(output.view(-1),Y.view(-1))\n",
     "            #print(\"loss/fit: {}\".format(l.item()))\n",
-    "            self.writer.add_scalar('lr={}/fit'.format(lr), l.item(), global_step=e)\n",
+    "            self.writer.add_scalar('lr={}/e={}/loss/fit'.format(lr,epochs), l.item(), global_step=e)\n",
     "            l.backward()\n",
     "            optimizer.step()\n",
-    "            optimizer.zero_grad()"
+    "            optimizer.zero_grad()\n",
+    "            self.eval()\n",
+    "            \n",
+    "    def close(self):\n",
+    "        self.writer.close()"
    ]
   },
   {
